<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".find.SelecterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:text="@string/detail"
                android:textColor="@color/bback"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/detail_hairtype"
                android:textColor="@color/bback"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ReView_hairtype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/detail_haircolor"
                android:textColor="@color/bback"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/lauout_haircolor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/haircolor6"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:srcCompat="@drawable/haircolor_bandw"
                    android:background="@color/color2"/>

                <ImageView
                    android:id="@+id/haircolor1"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:src="@color/hair1"
                    android:background="@color/color2"/>

                <ImageView
                    android:id="@+id/haircolor2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:src="@color/hair2"
                    android:background="@color/color2"/>

                <ImageView
                    android:id="@+id/haircolor3"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:src="@color/hair3"
                    android:background="@color/color2"/>

                <ImageView
                    android:id="@+id/haircolor4"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:src="@color/hair4"
                    android:background="@color/color2"/>

                <ImageView
                    android:id="@+id/haircolor5"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:src="@color/hair5"
                    android:background="@color/color2" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/detail_upper"
                android:textColor="@color/bback"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ReView_upper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

            </androidx.recyclerview.widget.RecyclerView>

            <Button
                android:id="@+id/button_color_upper"
                style="@style/FirebaseUI.Button.AccountChooser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_upper" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/detail_lower"
                android:textColor="@color/bback"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ReView_lower"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.recyclerview.widget.RecyclerView>

            <Button
                android:id="@+id/button_color_lower"
                style="@style/FirebaseUI.Button.AccountChooser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_lower" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/detail_skintone"
                android:textColor="@color/bback"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/lauout_skintone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:gravity="left"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/skintone1"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:src="@color/T1"
                    android:background="@color/color2"/>

                <ImageView
                    android:id="@+id/skintone2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:src="@color/T2"
                    android:background="@color/color2"/>

                <ImageView
                    android:id="@+id/skintone3"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:src="@color/T3"
                    android:background="@color/color2"/>

                <ImageView
                    android:id="@+id/skintone4"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:src="@color/T4"
                    android:background="@color/color2"
                    />

                <ImageView
                    android:id="@+id/skintone5"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:src="@color/T5"
                    android:background="@color/color2"/>

                <ImageView
                    android:id="@+id/skintone6"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:src="@color/T6"
                    android:background="@color/color2"/>

            </LinearLayout>

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/detail_height"
                android:textColor="@color/bback"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_height"
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:layout_margin="8dp">

            </Spinner>


            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/detail_shape"
                android:textColor="@color/bback"
                android:textSize="18sp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ReView_shape"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/detail"
                android:textColor="@color/bback"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText_etc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="(ข้อมูลลักษณะทางกายภาพเพิ่มเติม)"
                android:inputType="text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView55"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/detail_etc"
                android:textColor="@color/bback"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText_spe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="(ตย. รอยสัก แขนขาด ขาขาด)"
                android:inputType="text"
                android:textSize="18sp" />


            <Button
                android:id="@+id/button_submit"
                style="@android:style/Widget.DeviceDefault.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:text="ยืนยัน"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>